[package]
name = "envsubst"
version = "0.1.0"
authors = ["Jayson Reis <santosdosreis@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.26"
structopt = "0.3.12"

[dev-dependencies]
criterion = "0.3.1"

[[bench]]
name = "rendering"
harness = false

[profile.release]
debug = true
